...

    static var oneInsoles: String {
        NSLocalizedString("1 Insoles", bundle: .module, value: "1 Insoles", comment: "")
    }

    static var oneMinute: String {
        NSLocalizedString("1 minute", bundle: .module, value: "1 minute", comment: "")
    }

    static var threeMinutes: String {
        NSLocalizedString("3 minutes", bundle: .module, value: "3 minutes", comment: "")
    }

...
